# BioMedJImpact

./: LICENSE  README.md  concatenate_result.py  environment.yml  pyproject.toml  vllm_extraction_i.sh  vllm_extraction_sample.sh  vllm_keyword_extraction.py
configs/: extract.yaml  sample.yaml
data_schema/: jsonl_stats.md  sample_logs.md
examples/: run_local_extract.md  run_local_sample.md
scripts/: slurm_extract_archive.sh  slurm_sample_balanced.sh
src/bmj_pipeline/: extract_archive.py  io_utils.py  llm_utils.py  parsing.py  prompts.py  sample_balanced.py  stats.py
